Fixed horizontal spacing

--- a/css/style.css
+++ b/css/style.css
@@ -9,15 +9,17 @@ h1 {
 /* Simple Responsive Framework. */
 .row {
     width: 100%;
-    margin-bottom: 15px;
   }
 
-.colm {
+section {
     border: 1px solid black;
+    width: 95%;
+    margin-right: auto;
+    margin-left: auto;
     text-align: center;
     padding: 15px 10px 10px 10px;
     height: 200px;
-    background-color: grey;
+    background-color: lightgrey;
     margin-bottom: 15px;
     position: relative;
 }
@@ -66,7 +68,7 @@ h2 {
       width: 41.66%;
     }
     .col-lg-6 {
-      width: 50%;
+      width: calc(50%-24px);
     }
     .col-lg-7 {
       width: 58.33%;
@@ -92,7 +94,6 @@ h2 {
   @media (min-width: 768px) and (max-width: 991px) {
     .col-md-1, .col-md-2, .col-md-3, .col-md-4, .col-md-5, .col-md-6, .col-md-7, .col-md-8, .col-md-9, .col-md-10, .col-md-11, .col-md-12 {
       float: left;
-      border: 1px solid black;
     }
     .col-md-1 {
       width: 8.33%;
